--- a/UI/HTML/admin.html
+++ b/UI/HTML/admin.html
@@ -33,9 +33,9 @@ height: 100%;">
     <!-- Side navigation bar -->
     <div id="hidden-nav-bar" class="side-nav-bar">
         <a href="#" class="close-icon" onclick="closeHiddenMenuArea()">&times;</a>
-        <li><a href="#" onclick="showCreateAccount()">Create Account</a></li>
-        <li><a href="#" onclick="showTransaction()">Users' Accounts</a></li>
-        <li><a href="#" onclick="showResetPassword()">Reset Password</a></li>
+        <li><a href="#" onclick="showCreateAccountAdmin()">Create Account</a></li>
+        <li><a href="#" onclick="showUsersAdmin()">Users' Accounts</a></li>
+        <li><a href="#" onclick="showResetPasswordAdmin()">Reset Password</a></li>
         <a href="../index.html">Logout</a>
         <!-- <a href="#" onclick="contactUsFunction()">contact us</a> -->
 
@@ -57,9 +57,9 @@ height: 100%;">
         </div>
         <div class="sideMenu">
                 <ul class="navbar-nav">
-                    <li><a class="current"href="#" onclick="showCreateAccount()"><i class="fas fa-plus"></i> &nbsp; Create Account</a></li>
-                    <li><a href="#" onclick="showTransaction()"><i class="fas fa-exchange-alt"></i> &nbsp; Users' Accounts</a></li>
-                    <li><a href="#" onclick="showResetPassword()"> <i class="fas fa-cog"></i> &nbsp; Reset Password</a></li>
+                    <li id="admin1"><a href="#" onclick="showCreateAccountAdmin()"><i class="fas fa-plus"></i> &nbsp; Create Account</a></li>
+                    <li id="admin2"><a href="#" onclick="showUsersAdmin()"><i class="fas fa-exchange-alt"></i> &nbsp; Users' Accounts</a></li>
+                    <li id="admin3"><a href="#" onclick="showResetPasswordAdmin()"> <i class="fas fa-cog"></i> &nbsp; Reset Password</a></li>
                     <li><a href="../index.html" onclick="loginFunction()">Logout</a></li>
                     <!-- <li><a href="#" onclick="contactUsFunction()">contact us</a></li> -->
                 </ul>
@@ -68,7 +68,7 @@ height: 100%;">
         <div class="main-area-right" id="main-area-rightId">
             <!-- <h1>Welcome Banka!</h1> -->
             <!-- CREATE ACCOUNT -->
-            <div class="createAccount" id="usercreateAccount">
+            <div class="createAccount" id="usercreateAccountAdmin">
                 <h2>Create Admin/ Staff Account</h2>
                 <form action="">
                     <div class="createAccountInput">
@@ -100,11 +100,11 @@ height: 100%;">
                     </div>
                     <input type="submit" value="Create Account">
                 </form>
-                <a href="#" class="closecreateAccount-icon" id="closecreateAccount" onclick="closeCreateAccount()">&times;</a>
+                <a href="#" class="closecreateAccount-icon" id="closecreateAccount" onclick="closeAdminPages()">&times;</a>
             </div>
             <!-- TRANSACTION FIELD -->
 
-           <div class="transactionsPage" id="transaction-page">
+           <div class="transactionsPage" id="usersAccountsAdmin">
                <h3>List of Users' Accounts</h3>
                <table>
                     <tr>
@@ -117,7 +117,7 @@ height: 100%;">
                         <th>Balance</th>
                         <!-- <th>Options</th> -->
                     </tr>
-                    <tr onclick="viewSpecificAccountRecord()">
+                    <tr onclick="viewAccountAdmin()">
                         <td>1</td>
                         <td>040-2754-100</td>
                         <td>02-10-2018</td>
@@ -127,7 +127,7 @@ height: 100%;">
                         <td>700,000 frw</td>
                         <!-- <td><input type="submit" value="Activate"><input type="submit" value="Deactivate"><i class="fas fa-trash-alt"></i></td> -->
                     </tr>
-                    <tr onclick="viewSpecificAccountRecord()">
+                    <tr onclick="viewAccountAdmin()">
                         <td>2</td>
                         <td>040-3700-105</td>
                         <td>03-10-2018</td>
@@ -137,7 +137,7 @@ height: 100%;">
                         <td>900,000 frw</td>
                         <!-- <td><input type="submit" value="Activate"><input type="submit" value="Deactivate"><i class="fas fa-trash-alt"></i></td> -->
                     </tr>
-                    <tr onclick="viewSpecificAccountRecord()">
+                    <tr onclick="viewAccountAdmin()">
                         <td>3</td>
                         <td>040-2754-078</td>
                         <td>02-10-2018</td>
@@ -147,7 +147,7 @@ height: 100%;">
                         <td>1,000,000 frw</td>
                         <!-- <td><input type="submit" value="Activate"><input type="submit" value="Deactivate"><i class="fas fa-trash-alt"></i></td> -->
                     </tr>
-                    <tr onclick="viewSpecificAccountRecord()">
+                    <tr onclick="viewAccountAdmin()">
                         <td>4</td>
                         <td>040-2764-070</td>
                         <td>02-10-2018</td>
@@ -157,7 +157,7 @@ height: 100%;">
                         <td>700,000 frw</td>
                         <!-- <td><input type="submit" value="Activate"><input type="submit" value="Deactivate"><i class="fas fa-trash-alt"></i></td> -->
                     </tr>
-                    <tr onclick="viewSpecificAccountRecord()">
+                    <tr onclick="viewAccountAdmin()">
                         <td>5</td>
                         <td>040-2754-085</td>
                         <td>02-10-2018</td>
@@ -167,7 +167,7 @@ height: 100%;">
                         <td>700,000 frw</td>
                         <!-- <td><input type="submit" value="Activate"><input type="submit" value="Deactivate"><i class="fas fa-trash-alt"></i></td> -->
                     </tr>
-                    <tr onclick="viewSpecificAccountRecord()">
+                    <tr onclick="viewAccountAdmin()">
                         <td>6</td>
                         <td>040-2750-020</td>
                         <td>02-10-2018</td>
@@ -179,11 +179,11 @@ height: 100%;">
                     </tr>
 
                 </table>
-                <a href="#" class="closecreateAccount-icon" id="closeTransactions" onclick="closeTransactions()">&times;</a>
+                <a href="#" class="closecreateAccount-icon" id="closeTransactions" onclick="closeAdminPages()">&times;</a>
            </div>
 
            <!-- VIEW SPECIFIC ACCOUNT RECORD -->
-           <div class="transactionsPage" id="viewSpeficAccount">
+           <div class="transactionsPage" id="viewSpeficAccountAdmin">
               <div class="singleAccountView">
                 <div class="singleAccountViewOne">
                     <h2>GISA Chris</h2>
@@ -202,10 +202,10 @@ height: 100%;">
                     <button class="red"> Delete</button>
                 </div>
               </div>
-               <a href="#" class="closecreateAccount-icon" id="closeSpecificAccount" onclick="closeSpecificAccount()">&times;</a>
+               <a href="#" class="closecreateAccount-icon" id="closeSpecificAccount" onclick="closeAdminPages()">&times;</a>
            </div>
             <!-- CREATE RESET PASSWORD -->
-            <div class="createAccount" id="restpassword">
+            <div class="createAccount" id="restpasswordAdminId">
                 <h2>Reset Password</h2>
                 <form action="" id="userCreateBankAccountId">
                     <div class="createAccountInput">
@@ -225,10 +225,10 @@ height: 100%;">
                     </div>
                     <input type="submit" value="Reset Password" id="createAccountSubmit">
                 </form>
-                    <a href="#" class="closecreateAccount-icon" id="closeResetPassword" onclick="closeResetPassword()">&times;</a>
+                    <a href="#" class="closecreateAccount-icon" id="closeResetPassword" onclick="closeAdminPages()">&times;</a>
             </div>
             <!-- WELCOME NOTE DIV -->
-                <div class="newusersTable" id="signupDashboard">
+                <div class="newusersTable" id="AdminDashboardAccounts">
                     <div class="transactionsPageHome" id="transactionsPageHomeId">
                         <h3>List of Users' Accounts</h3>
                         <table>
@@ -242,7 +242,7 @@ height: 100%;">
                                  <th>Balance</th>
                                  <!-- <th>Options</th> -->
                              </tr>
-                             <tr onclick="viewSpecificAccountRecord()">
+                             <tr onclick="viewAccountAdmin()">
                                  <td>1</td>
                                  <td>040-2754-100</td>
                                  <td>02-10-2018</td>
@@ -252,7 +252,7 @@ height: 100%;">
                                  <td>700,000 frw</td>
                                  <!-- <td><input type="submit" value="Activate"><input type="submit" value="Deactivate"><i class="fas fa-trash-alt"></i></td> -->
                              </tr>
-                             <tr onclick="viewSpecificAccountRecord()">
+                             <tr onclick="viewAccountAdmin()">
                                  <td>2</td>
                                  <td>040-3700-105</td>
                                  <td>03-10-2018</td>
@@ -262,7 +262,7 @@ height: 100%;">
                                  <td>900,000 frw</td>
                                  <!-- <td><input type="submit" value="Activate"><input type="submit" value="Deactivate"><i class="fas fa-trash-alt"></i></td> -->
                              </tr>
-                             <tr onclick="viewSpecificAccountRecord()">
+                             <tr onclick="viewAccountAdmin()">
                                  <td>3</td>
                                  <td>040-2754-078</td>
                                  <td>02-10-2018</td>
@@ -272,7 +272,7 @@ height: 100%;">
                                  <td>1,000,000 frw</td>
                                  <!-- <td><input type="submit" value="Activate"><input type="submit" value="Deactivate"><i class="fas fa-trash-alt"></i></td> -->
                              </tr>
-                             <tr onclick="viewSpecificAccountRecord()">
+                             <tr onclick="viewAccountAdmin()">
                                  <td>4</td>
                                  <td>040-2764-070</td>
                                  <td>02-10-2018</td>
@@ -282,7 +282,7 @@ height: 100%;">
                                  <td>700,000 frw</td>
                                  <!-- <td><input type="submit" value="Activate"><input type="submit" value="Deactivate"><i class="fas fa-trash-alt"></i></td> -->
                              </tr>
-                             <tr onclick="viewSpecificAccountRecord()">
+                             <tr onclick="viewAccountAdmin()">
                                  <td>5</td>
                                  <td>040-2754-085</td>
                                  <td>02-10-2018</td>
@@ -292,7 +292,7 @@ height: 100%;">
                                  <td>700,000 frw</td>
                                  <!-- <td><input type="submit" value="Activate"><input type="submit" value="Deactivate"><i class="fas fa-trash-alt"></i></td> -->
                              </tr>
-                             <tr onclick="viewSpecificAccountRecord()">
+                             <tr onclick="viewAccountAdmin()">
                                  <td>6</td>
                                  <td>040-2750-020</td>
                                  <td>02-10-2018</td>
