--- a/UI/HTML/login.html
+++ b/UI/HTML/login.html
@@ -34,9 +34,9 @@ height: 100%;">
     <!-- Side navigation bar -->
     <div id="hidden-nav-bar" class="side-nav-bar">
         <a href="#" class="close-icon" onclick="closeHiddenMenuArea()">&times;</a>
-        <a href="#" onclick="showCreateAccount()">Create Account</a>
-        <a href="#" onclick="showTransaction()">Transactions</a>
-        <li><a href="#" onclick="showResetPassword()">Reset Password</a></li>
+        <a href="#" onclick="showCreateAccountLogin()">Create Account</a>
+        <a href="#" onclick="showTransactionLogin()">Transactions</a>
+        <li><a href="#" onclick="showResetPasswordLogin()">Reset Password</a></li>
         <a href="../index.html">Logout</a>
         <!-- <a href="#" onclick="contactUsFunction()">contact us</a> -->
 
@@ -57,9 +57,9 @@ height: 100%;">
         </div>
         <div class="sideMenu">
                 <ul class="navbar-nav">
-                    <li><a href="#" onclick="showCreateAccount()"><i class="fas fa-plus"></i> &nbsp; Create Account</a></li>
-                    <li><a href="#" onclick="showTransaction()"><i class="fas fa-exchange-alt"></i> &nbsp; Transactions</a></li>
-                    <li><a href="#" onclick="showResetPassword()"> <i class="fas fa-cog"></i> &nbsp; Reset Password</a></li>
+                    <li id="login1"><a href="#" onclick="showCreateAccountLogin()"><i class="fas fa-plus"></i> &nbsp; Create Account</a></li>
+                    <li id="login2"><a href="#" onclick="showTransactionLogin()"><i class="fas fa-exchange-alt"></i> &nbsp; Transactions</a></li>
+                    <li id="login3"><a href="#" onclick="showResetPasswordLogin()"> <i class="fas fa-cog"></i> &nbsp; Reset Password</a></li>
                     <li><a href="../index.html" onclick="loginFunction()">Logout</a></li>
                     <!-- <li><a href="#" onclick="contactUsFunction()">contact us</a></li> -->
                 </ul>
@@ -68,7 +68,7 @@ height: 100%;">
         <div class="main-area-right" id="main-area-rightId">
             <!-- <h1>Welcome Banka!</h1> -->
             <!-- CREATE ACCOUNT -->
-            <div class="createAccount" id="usercreateAccount">
+            <div class="createAccount" id="LoginCreateAccountId">
                 <h2>Create Account</h2>
                 <form action="">
                     <div class="createAccountInput">
@@ -104,11 +104,11 @@ height: 100%;">
                     </div>
                     <input type="submit" value="Create Account">
                 </form>
-                <a href="#" class="closecreateAccount-icon" id="closecreateAccount" onclick="closeCreateAccount()">&times;</a>
+                <a href="#" class="closecreateAccount-icon" id="closecreateAccount" onclick="closeLoginPages()">&times;</a>
             </div>
             <!-- TRANSACTION FIELD -->
 
-           <div class="transactionsPage" id="transaction-page">
+           <div class="transactionsPage" id="LoginTransactions">
                <h3>List of Transactions</h3>
                <table>
                     <tr>
@@ -176,10 +176,10 @@ height: 100%;">
                     </tr>
 
                 </table>
-                <a href="#" class="closecreateAccount-icon" id="closeTransactions" onclick="closeTransactions()">&times;</a>
+                <a href="#" class="closecreateAccount-icon" id="closeTransactions" onclick="closeLoginPages()">&times;</a>
            </div>
            <!-- CREATE RESET PASSWORD -->
-           <div class="createAccount" id="restpassword">
+           <div class="createAccount" id="Loginrestpassword">
                 <h2>Reset Password</h2>
                 <form action="" id="userCreateBankAccountId">
                     <div class="createAccountInput">
@@ -199,10 +199,10 @@ height: 100%;">
                     </div>
                     <input type="submit" value="Reset Password" id="createAccountSubmit">
                 </form>
-                    <a href="#" class="closecreateAccount-icon" id="closeResetPassword" onclick="closeResetPassword()">&times;</a>
+                    <a href="#" class="closecreateAccount-icon" id="closeResetPassword" onclick="closeLoginPages()">&times;</a>
             </div>
             <!-- WELCOME NOTE DIV -->
-            <div class="signupDashboard" id="signupDashboard">
+            <div class="signupDashboard" id="LoginDashboardId">
                     <h2>Welcome to Banka!</h2>
                     <h3>Get access and enjoy our online banking services</h3>
                     <span>
