update the gh-pages

--- a/UI/HTML/loginform.html
+++ b/UI/HTML/loginform.html
@@ -14,6 +14,9 @@ height: 100%;">
     <section id="main-area">
         
         <div class="non-slider">
+                <div class="backButton">
+                        <a href="../index.html"><i class="fas fa-angle-left"></i></a>
+                </div>
                 <!-- LOGIN -->
                 <div class="login" id="userLogin">
                         <h2>Login form</h2>
