--- a/UI/HTML/signupform.html
+++ b/UI/HTML/signupform.html
@@ -13,6 +13,9 @@ height: 100%;">
     
     <!-- main area -->
     <section id="main-area">
+        <div class="backButton">
+                <a href="../index.html"><i class="fas fa-angle-left"></i></a>
+        </div>
         <div class="non-slider">
                 <!-- SIGN UP -->
                 <div class="signUp" id="userSignUp">
