removes password on create bank account, and specified transaction type to debit and credit pages

--- a/UI/HTML/login.html
+++ b/UI/HTML/login.html
@@ -87,10 +87,7 @@ height: 100%;">
                         <input type="email" name="" placeholder=" Email" required="">
                         <!-- <label for="email">Email</label> -->
                     </div>
-                    <div class="createAccountInput">
-                        <input type="password" name="" placeholder=" Password" required="">
-                        <!-- <label for="password">Password</label> -->
-                    </div>
+                
                     <div class="createAccountInput">
                         <input type="float" name="" placeholder="Opening Balance" required="">
                         <!-- <label for="">Openning Balance</label> -->
@@ -98,7 +95,7 @@ height: 100%;">
                     <div class="createAccountInput">
                         <select name="accountType" id="">
                             <option value="">Account Type</option>
-                            <option value="Saving">Saving</option>
+                            <option value="Saving">Savings</option>
                             <option value="Current">Current</option>
                         </select>
                     </div>
