--- a/UI/HTML/signup.html
+++ b/UI/HTML/signup.html
@@ -91,17 +91,13 @@ height: 100%;" >
                         <!-- <label for="email">Email</label> -->
                     </div>
                     <div class="createAccountInput">
-                        <input type="password" name="" placeholder=" Password" required="" oninput="onInputPasswordCreateAccount()" id="passwordAreaId">
-                        <!-- <label for="password">Password</label> -->
-                    </div>
-                    <div class="createAccountInput">
                         <input type="float" name="" placeholder=" Openning Balance" required="">
                         <!-- <label for="">Openning Balance</label> -->
                     </div>
                     <div class="">
                         <select name="accountType" id="" class="select">
                             <option value="">Account Type</option>
-                            <option value="Saving">Saving</option>
+                            <option value="Saving">Savings</option>
                             <option value="Current">Current</option>
                         </select>
                     </div>
