changed the home page and app colors

--- a/UI/HTML/loginform.html
+++ b/UI/HTML/loginform.html
@@ -22,15 +22,15 @@ height: 100%;">
                         <h2>Login form</h2>
                         <form action="" id="loginFormAtt">
                             <div class="loginInput">
-                                <input type="email" name="" required="" placeholder="  Email" id="loginEmailField">
+                                <input type="email" name="" required="" placeholder="Email" id="loginEmailField">
                                 <!-- <label for="email">Email</label> -->
                             </div>
                             <div class="loginInput">
-                                <input type="password" name="" placeholder="  Password" required="" id="loginPasswordField" oninput="onInputLoginFunction()" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{6,12}">
+                                <input type="password" name="" placeholder="Password" required="" id="loginPasswordField" oninput="onInputLoginFunction()" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{6,12}">
                                 <!-- <label for="password">Password</label> -->
                             </div>
                             <div id="errorMessageLogin" class="errMessage">
-                                <!-- <p>Password characters should be 6 to 12, with ([A-Z], [a-z], [0-9]</p> -->
+                                <p>Password characters should be 6 to 12, with ([A-Z], [a-z], [0-9]</p>
                             </div>
                             <input type="submit" value="Login" id="loginButton" onclick="loginSubmitFunction()">
                         </form>
