--- a/UI/HTML/staff.html
+++ b/UI/HTML/staff.html
@@ -95,7 +95,7 @@ height: 100%;" >
                         <input type="float" name="" placeholder=" credit" required="">
                         <!-- <label for="">Account Balance</label> -->
                     </div>
-                    <input type="submit" value="Credit">
+                    <input type="submit" class="submitinput" value="Credit">
                 </form>
                 <a href="#" class="closecreateAccount-icon" id="closecreateAccount" onclick="closeCreateAccount()">&times;</a>
             </div>
@@ -125,7 +125,7 @@ height: 100%;" >
                             <!-- <label for="">Account Balance</label> -->
                         </div>
                         
-                        <input type="submit" value="Debit">
+                        <input type="submit" class="submitinput" value="Debit">
                     </form>
                     <a href="#" class="closecreateAccount-icon" id="closecreateAccount" onclick="closeDebitPage()">&times;</a>
                 </div>
@@ -250,7 +250,7 @@ height: 100%;" >
                     <div id="errorMessageCreateAccount" class="errMessage">
                         <p>Password characters should be 6 to 12</p>
                     </div>
-                    <input type="submit" value="Reset Password" id="createAccountSubmit">
+                    <input type="submit" class="submitinput" value="Reset Password" id="createAccountSubmit">
                 </form>
                     <a href="#" class="closecreateAccount-icon" id="closeResetPassword" onclick="closeResetPassword()">&times;</a>
             </div>
