[feature #165930333] this commit fetches data for staff and admin login and create staff/admin account

--- a/UI/HTML/login.html
+++ b/UI/HTML/login.html
@@ -87,7 +87,7 @@ height: 100%;">
                     <div class="createAccNotification" id="createAccountNotification">
                         <p>Are you sure you want to create a bank account?</p>
                         <input type="button" value="No" id="createAccValueNO" class="submitinput" onclick="NOclose()">
-                        <input type="submit" value="YES" id="createAccValueYES" class="submitinput" onclick="YESclose()">
+                        <input type="submit" value="YES" id="submitbutton" class="submitinput" onclick="YESclose()">
                     </div>
                 </form>
                 <a href="#" class="closecreateAccount-icon" id="closecreateAccount" onclick="closeLoginPages()">&times;</a>
@@ -196,8 +196,8 @@ height: 100%;">
                             users can signup and create bank accounts online, but must visit the branch to withdraw or
                             deposit money..
                     </span>
-                    
                 </div>
+                <div id="createdACCnotification" class="createdstaff"></div>
 
         </div>
     </section>
