--- a/UI/HTML/signup.html
+++ b/UI/HTML/signup.html
@@ -94,7 +94,7 @@ height: 100%;" >
                     <div class="createAccNotification" id="createAccountNotification">
                         <p>Are you sure you want to create a bank account?</p>
                         <input type="button" value="No" id="createAccValueNO" class="submitinput" onclick="NOclose()">
-                        <input type="submit" value="YES" id="createAccValueYES" class="submitinput" onclick="YESclose()">
+                        <input type="submit" value="YES" id="submitbutton" class="submitinput" onclick="YESclose()">
                     </div>
                 </form>
                 <a href="#" class="closecreateAccount-icon" id="closecreateAccount" onclick="closeSignup()">&times;</a>
@@ -151,15 +151,18 @@ height: 100%;" >
             </div>
            <!-- WELCOME NOTE DIV -->
             <div class="signupDashboard" id="signupDashboardId">
-                <p id="201signup"></p>
-                <span>
-                        Banka is a light-weight core banking application that powers banking operations like account
-                        creation, customer deposit and withdrawals. This app is meant to support a single bank, where
-                        users can signup and create bank accounts online, but must visit the branch to withdraw or
-                        deposit money..
-                </span>
+                <div>
+                        <p id="201signup"></p>
+                        <span>
+                                Banka is a light-weight core banking application that powers banking operations like account
+                                creation, customer deposit and withdrawals. This app is meant to support a single bank, where
+                                users can signup and create bank accounts online, but must visit the branch to withdraw or
+                                deposit money..
+                        </span>
+                </div>
                 
             </div>
+            <div id="createdACCnotification" class="createdstaff"></div>
 
         </div>
     </section>
