--- a/UI/HTML/staff.html
+++ b/UI/HTML/staff.html
@@ -52,9 +52,8 @@ height: 100%;" >
                 </div>
                 <div class="profile">
                     <img src="../ASSETS/IMG_1492 (1)-min.JPG" alt="profile" width="100px" height="100px">
-                    <p>Habineza Leon Christian <br>
-                    Branch: Gishushu 
-                    </p>
+                    <p id="loggedstaff" class="userprofilepar"> </p>
+                    <p id="loggedstaffemail" class="userprofilepar"> </p>
                 </div>
         </div>
         <div class="sideMenu">
@@ -343,5 +342,6 @@ height: 100%;" >
     </footer>
 </div>
 <script src="../JS/index.js"></script>
+<script src="../JS/staff.fetch.js"></script>
 </body>
 </html>
